@@ -125,6 +125,7 @@ sub new
 		Swallow => qr/\s/,
 		Separator => "\n",
 		cur => 0,
+		may_break => 0,
 		soft_space => "",
 		word => "",
 		%args,
@@ -136,6 +137,8 @@ sub new
 # Internal properties:
 #
 # cur - the last known column position
+#
+# may_break - nonzero if the current location allows a linebreak
 #
 # soft_space - contains added text that will not be printed if a linebreak
 #              occurs
@@ -213,7 +216,7 @@ sub add
 		die "assertion failed" unless length($word) >= 1;
 
 		my $next_soft_space;
-		if ($word =~ s/($swallow)$//s)
+		if (defined($swallow) && $word =~ s/($swallow)$//s)
 		{
 			$next_soft_space = $1;
 		}
@@ -225,7 +228,7 @@ sub add
 		my $to_print = $self->{soft_space} . $word;
 		my $new_pos = _calculate_new_column($self->{cur}, $to_print);
 
-		if ($new_pos > $self->{Margin})
+		if ($new_pos > $self->{Margin} && $self->{may_break})
 		{
 			# what would happen if we put the separator in?
 			my $w_sep = _calculate_new_column($self->{cur},
@@ -245,6 +248,7 @@ sub add
 		$self->output($to_print);
 		$self->{soft_space} = $next_soft_space;
 		$self->{cur} = $new_pos;
+		$self->{may_break} = 1;
 	}
 }
 
@@ -280,6 +284,7 @@ sub flush
 	my $self = shift;
 
 	local $self->{NoBuffering} = 1;
+	local $self->{Swallow} = undef;
 	$self->add("");
 }
 
